[package]
name = "etwin_mailer"
version = "0.9.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Email formatter for Eternaltwin emails"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[features]
default = ["json", "html"]
json = []
html = []

[dependencies]
async-trait = "0.1.51"
etwin_core = { version = "0.9.2", features = ["_serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
lettre = { version = "0.10.0-rc.3", default-features = false, features = ["smtp-transport", "hostname", "r2d2", "builder", "tokio1-rustls-tls"] }
neon = { version = "0.9.1", optional = true, default-features = false, features = ["napi-6"] }

[dev-dependencies]
etwin_config = "0.9.2"
test-generator = "0.3.0"
tokio = { version = "1.11.0", features = ["macros", "rt"] }
