[package]
name = "etwin_mt_dns"
version = "0.9.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "DNS client for Motion-Twin's websites"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_core = { version = "0.9.1", features = ["_serde"] }
neon = { version = "0.9.1", optional = true, default-features = false, features = ["napi-6"] }
