[package]
name = "etwin_password"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Password implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_core = { path = "../core", features = ["sqlx"] }
hmac = "0.10.1"
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
rand_core = { version = "0.6.2", features = ["getrandom"] }
scrypt = "0.6.4"
sha2 = "0.9.3"
subtle = "2.4.0"
sysinfo = "0.16.5"

[dev-dependencies]
hex = "0.4.3"
