[package]
name = "etwin_password"
version = "0.9.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Password implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_core = { version = "0.9.2", features = ["sqlx"] }
hmac = "0.11.0"
neon = { version = "0.9.1", optional = true, default-features = false, features = ["napi-6"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
scrypt = "0.8.0"
sha2 = "0.9.8"
subtle = "2.4.1"
sysinfo = "0.20.3"

[dev-dependencies]
hex = "0.4.3"
