[package]
name = "etwin_populate"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Hammerfest store implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_constants = { version = "0.1.0", path = "../constants" }
etwin_core = { version = "0.1.0", path = "../core", features = ["sqlx"] }
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
