[package]
name = "etwin_rest"
version = "0.7.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "HTTP REST interface for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_core = { version = "0.7.0" }
etwin_services = { version = "0.7.0" }
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"

[dev-dependencies]
chrono = "0.4.19"
etwin_dinoparc_store = { version = "0.7.0" }
etwin_hammerfest_client = { version = "0.7.0" }
etwin_hammerfest_store = { version = "0.7.0" }
etwin_link_store = { version = "0.7.0" }
etwin_user_store = { version = "0.7.0" }
