[package]
name = "etwin_rest"
version = "0.9.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "HTTP REST interface for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_core = "0.9.2"
etwin_services = "0.9.2"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
warp = "0.3.1"

[dev-dependencies]
chrono = "0.4.19"
etwin_dinoparc_store = "0.9.2"
etwin_hammerfest_client = "0.9.2"
etwin_hammerfest_store = "0.9.2"
etwin_link_store = "0.9.2"
etwin_user_store = "0.9.2"
