[package]
name = "etwin_scraper_tools"
version = "0.9.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Helper functions for `scraper`"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
html5ever = "0.25.1"
once_cell = "1.8.0"
scraper = "0.12.0"
tendril = "0.4.2"
thiserror = "1.0.29"
