[package]
name = "scratch"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Simple user service for Postgres (Rust)"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
chrono = "^0.4.19"
