[package]
name = "etwin_serde_tools"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Helper functions for `serde`"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
serde_json = "1.0.64"
