[package]
name = "etwin_serde_tools"
version = "0.8.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Helper functions for `serde`"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", optional = true }
hex = "0.4.3"
http = { version = "0.2.4", optional = true }
reqwest = { version = "0.11.4", optional = true, default-features = false }
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.64"

[features]
serde-http = ["http", "reqwest"]
